objects/PrintJob__c.object
<CustomObject>
    <description>Compliance Requirement
To keep track of the final URL of the merged PDF document.  Merged version of Article PDFs and Desk Guide PDFs.</description>
    <fields>
        <fullName>Binder__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Binder</label>
        <referenceTo>Binder__c</referenceTo>
        <relationshipLabel>PrintJobs</relationshipLabel>
        <relationshipName>PrintJobs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EndTime__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OutputLink__c</fullName>
        <label>Output Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>StartTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>PrintJob</label>
    <nameField>
        <displayFormat>PJ-{0000000}</displayFormat>
        <label>PrintJob Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PrintJobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>